src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <description>Decision of Prior Authorization at the line level.</description>
        <label>Decision Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Administrative</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Clinical</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Reconsideration</fullName>
                </value>
                <value>
                    <fullName>Not Covered/Not Approved - Administrative</fullName>
                </value>
                <value>
                    <fullName>Not Covered/Not Approved - Clinical</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved</fullName>
                    <isActive>false</isActive>
                    <label>Covered/Approved</label>
                </value>
                <value>
                    <fullName>Not Covered/Not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Not Covered/Not Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date for service line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gap_Outcome__c</fullName>
        <description>Fields display when the gap exception checkbox is checked and the decision out come is covered/approved</description>
        <label>Gap Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Decision_Outcome__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Gap Approved</fullName>
                </value>
                <value>
                    <fullName>Clinical Gap Not Approved: Successful Steerage</fullName>
                </value>
                <value>
                    <fullName>Clinical Gap Not Approved: Unsuccessful Steerage</fullName>
                </value>
                <value>
                    <fullName>Gap Review Not Appropriate</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Approved</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Not Approved: Successful Steerage</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Not Approved: Unsuccessful Steerage</fullName>
                </value>
                <value>
                    <fullName>Provider Incorrectly Identified as OON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Director__c</fullName>
        <description>Name of the Medical Director</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Authorization_Type__c</fullName>
        <description>Indicates if the Prior Authorization is a Gap Exception and displays at the line level.  Pulls from the Work Order.</description>
        <formula>IF(WorkOrder.Gap_Exception_Review__c = TRUE, &quot;Gap Exception Review&quot;, &quot;Prior Authorization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Authorization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <description>Procedure code for the service line of the prior authorization</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedure Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for Outcome.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Decision_Outcome__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits Exhausted</fullName>
                </value>
                <value>
                    <fullName>Case Opened on Wrong Member</fullName>
                </value>
                <value>
                    <fullName>Change in Review Priority</fullName>
                </value>
                <value>
                    <fullName>Claims Processing Error</fullName>
                </value>
                <value>
                    <fullName>Credentialing Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate Notification</fullName>
                </value>
                <value>
                    <fullName>Duplicate Service</fullName>
                </value>
                <value>
                    <fullName>Entered on Wrong Member</fullName>
                </value>
                <value>
                    <fullName>I&amp;E Criteria Not Met</fullName>
                </value>
                <value>
                    <fullName>Infusion Site of Care</fullName>
                </value>
                <value>
                    <fullName>Initially Not Covered as Ineligible/Eligibility Established</fullName>
                </value>
                <value>
                    <fullName>Lack of Medical Necessity</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which cannot withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which can withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Member Ineligible for Benefits</fullName>
                </value>
                <value>
                    <fullName>Member Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Modified Level of Care</fullName>
                </value>
                <value>
                    <fullName>Non-network - services are available/accessible in network -(No OON Benefits)</fullName>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Other Payer</fullName>
                </value>
                <value>
                    <fullName>Provider is a contracted network provider/services are OON</fullName>
                </value>
                <value>
                    <fullName>Provider Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Request Submitted Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Second Opinion</fullName>
                </value>
                <value>
                    <fullName>Service Not Rendered</fullName>
                </value>
                <value>
                    <fullName>Services are being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not covered due to specific exclusions or limitations in member&apos;s benefit document</fullName>
                </value>
                <value>
                    <fullName>Services do not require a skilled/licensed professional.</fullName>
                </value>
                <value>
                    <fullName>Services provided are for the purpose of preventing, diagnosing, or treating a sickness, injury, substance abuse or their symptoms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Reference__c</fullName>
        <description>Service Reference number for the service line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Reference #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date for service line.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype of Decision Outcome</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Reconsideration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>